- added source documentation - defined responsive ranges - fixed broken thumbnails - aligned some content

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -67,9 +67,9 @@ $primary-color: #008CBA;
 // $shiny-edge-active-color: rgba(#000, .2);
 
 // Media Query Ranges
-// $small-range: (0em, 40em);
-// $medium-range: (40.063em, 64em);
-// $large-range: (64.063em, 90em);
+$small-range: (0em, 40em);
+$medium-range: (40.063em, 64em);
+$large-range: (64.063em, 90em);
 // $xlarge-range: (90.063em, 120em);
 // $xxlarge-range: (120.063em);
 
